# ECG-Rust

./: Cargo.toml  LICENSE  README.md  config.yml
shaders/: fragment.glsl  vertex.glsl
src/: main.rs  obj_writer.rs  terrain.rs
src/terraingenerators/: diamond_square.rs  mod.rs  perlin.rs
